# rpi_animations

./: .coverage  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
inputs/: settings.json  settings_example.json  settings_examples.json
rpi_animations/: __init__.py  __main__.py  canvas.py  item.py  items.py  message.json  message.py  picture.py  screen_animator.py  settings.json  settings.py  text_animator.py
rpi_animations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rpi_animations/inputs/: settings-autumn.json  settings-bday-lucy.json  settings-summer.json  settings-xmas.json  settings.json  settings_example.json  settings_summer.json
rpi_animations/resources/: settings.json
src/rpi_animations/: canvas.py  items.py  model.py
tests/: test_rpi_animations.py
tests/rpi_animations/: test_canvas.py  test_item.py  test_items.py  test_message.py  test_model.py  test_picture.py  test_settings.py
