[tool.poetry]
name = "rpi_animations"
version = "0.1.0"
description = ""
authors = ["David Anscombe <dave.anski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
