[tool.poetry]
name = "rpi_animations"
version = "0.1.0"
description = ""
authors = ["David Anscombe <dave.anski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.8"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
